--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Music Website</title>
 </head>
 <body>
-    <header>
+    <header id="hed">
         <div class="menu_side">
               <h1>Playlist</h1>
               <div class="playlist">
@@ -213,7 +213,7 @@
     <input type="text" placeholder="Search Music...">
   </div>
 <div class="user">
-  <img src="images/download (2).jpg " alt="">
+  <img src="images/logo.jpeg " alt="">
 </div>
 </nav>
 <div class="content">
@@ -341,10 +341,10 @@
 
 <div class="item Artists_bx">
   <li>
-    <img src=" images/images.jpg" alt="">
+    <img src=" images/ashu.jpeg" alt="">
   </li>
   <li>
-    <img src="images/usama ali.jpg" alt="">
+    <img src="images/images.jpg" alt="">
   </li><li>
     <img src=" images/tulsi kumar.jpeg" alt="">
   </li><li>
