--- a/index.html
+++ b/index.html
@@ -425,6 +425,7 @@
           <div class="wave1"></div>
          </div>
 <img src="img/26th.jpg" alt="" id="poster_master_play">
+          <div class="function">
 <h5 id="title">
   vande matram
   <div class="subtitle">Bankim Chandra</div>
@@ -443,15 +444,17 @@
 <div class="bar2" id="bar2"></div>
   <div class="dot"></div>
 </div>
+          <!--
 <span id="currentend">0:30</span>
 <div class="vol"> 
   <i class="bi bi-volume-up-fill" id="vol_icons"></i>
   <input type="range" min="0" max="100" id="vol">
   <div class="vol_bar"></div>
     <div class="dot" id="vol_dot"></div>
-  </div>
+  </div> -->
   
 </div>
+          </div>
 
 
     </header>
